[package]
name = "serde_prom"
version = "0.1.3"
edition = "2024"
description = "A simple Prometheus serializer for serde"
license = "MIT"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
documentation = "https://docs.rs/serde"
repository = "http://github.com/oguzbilgener/serde_prom"
keywords = ["serde", "prometheus", "metrics"]
categories = ["encoding"]
readme = "README.md"

[dependencies]
indexmap = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"

[dev-dependencies]
anyhow = "1"
indoc = "2.0.6"
openmetrics-parser = "0.4.4"
pretty_assertions = "1.4.1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
cargo = "warn"
all = "warn"
